# freedom-os-manager

./: LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
docs/: capability-registry-and-manager.md
references/: capability-install.md  contribution-workflow.md
scripts/: bootstrap-todo-dashboard.sh  list-installed-capabilities.sh
skills/freedom-os-manager/: SKILL.md
src/freedom_os_manager/: __init__.py  cli.py  installed.py  installed_report.py
tests/: test_cli.py
