[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freedom-os-launcher"
version = "0.1.0"
description = "Freedom OS launcher for environment preparation and repository bootstrap."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "way2freedom" }]
dependencies = []

[project.scripts]
freedom-os = "freedom_os_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
